# esp32_boilerplate_C

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  boilerplate.c
main/include/: led_control.c  led_control.h  utils.c  utils.h  wifi_control.c  wifi_control.h
